generator client {
  provider = "prisma-client-js"
  output   = "../node_modules/.prisma/client-academic"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL_ACADEMIC")
}

/// =========================
///    FACULTAD
/// =========================
model Facultad {
  id          String   @id @default(uuid()) @db.Uuid
  nombre      String   @db.VarChar(255)
  codigo      String   @unique @db.VarChar(50)
  descripcion String?  @db.Text
  estado      Boolean  @default(true)
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  escuelas Escuela[]

  @@map("facultad")
}

/// =========================
///    ESCUELA
/// =========================
model Escuela {
  id          String   @id @default(uuid()) @db.Uuid
  idFacultad  String   @map("id_facultad") @db.Uuid
  nombre      String   @db.VarChar(255)
  codigo      String   @unique @db.VarChar(50)
  descripcion String?  @db.Text
  estado      Boolean  @default(true)
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  facultad       Facultad        @relation(fields: [idFacultad], references: [id], onDelete: Restrict)
  alumnos        Alumno[]
  secretarias    Secretaria[]
  supervisores   Supervisor[]
  coordinadores  Coordinador[]
  lineasFacultad LineaFacultad[]

  @@map("escuela")
}

/// =========================
///    ALUMNO
/// =========================
model Alumno {
  id        String   @id @default(uuid()) @db.Uuid
  usuarioId String   @unique @map("usuario_id") @db.Uuid
  idEscuela String   @map("id_escuela") @db.Uuid
  codigo    String   @unique @db.VarChar(30)
  ciclo     String   @db.VarChar(20)
  año       String   @db.VarChar(4)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  escuela Escuela @relation(fields: [idEscuela], references: [id], onDelete: Restrict)

  @@map("alumno")
}

/// =========================
///    SECRETARIA
/// =========================
model Secretaria {
  id        String   @id @default(uuid()) @db.Uuid
  usuarioId String   @map("usuario_id") @db.Uuid
  idEscuela String   @map("id_escuela") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  escuela Escuela @relation(fields: [idEscuela], references: [id], onDelete: Restrict)

  @@map("secretaria")
}

/// =========================
///    SUPERVISOR
/// =========================
model Supervisor {
  id        String   @id @default(uuid()) @db.Uuid
  usuarioId String   @map("usuario_id") @db.Uuid
  idEscuela String   @map("id_escuela") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  escuela Escuela @relation(fields: [idEscuela], references: [id], onDelete: Restrict)

  @@map("supervisor")
}

/// =========================
///    COORDINADOR
/// =========================
model Coordinador {
  id        String   @id @default(uuid()) @db.Uuid
  usuarioId String   @map("usuario_id") @db.Uuid
  idEscuela String   @map("id_escuela") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  escuela Escuela @relation(fields: [idEscuela], references: [id], onDelete: Restrict)

  @@map("coordinador")
}

/// =========================
///    LINEA FACULTAD
/// =========================
model LineaFacultad {
  id        String   @id @default(uuid()) @db.Uuid
  idEscuela String   @map("id_escuela") @db.Uuid
  nombre    String   @db.VarChar(255)
  codigo    String   @db.VarChar(50)
  estado    Boolean  @default(true)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  escuela Escuela @relation(fields: [idEscuela], references: [id], onDelete: Restrict)

  @@map("linea_facultad")
}
